first publish version!

--- a/src/components/clientCarousel/style.css
+++ b/src/components/clientCarousel/style.css
@@ -1,5 +1,5 @@
 .testimonial{
-    background-image: url(../../images/testimonial.jpg);
+    background-image: url(../../images/testimonial.png);
     background-size: cover;
     background-position: center center;
     min-height: 200px;
