--- a/src/components/productSlider/style.css
+++ b/src/components/productSlider/style.css
@@ -1,70 +1,86 @@
 .col-4 {
   width: 33.33333333%;
 }
-.productSlider .d-flex {
+.productElement .d-flex {
   gap: 8px;
 }
-.productSlider .price-old {
+.productElement .price-old {
   color: #999;
   font-size: 16px;
   font-weight: 400;
   text-decoration: line-through;
 }
-.productSlider .price-new {
+.productElement .price-new {
   font-size: 16px;
   font-weight: bolder;
 }
-.productSlider .card-title {
+.productElement .card-title {
   font-weight: 300;
   text-align: left;
 }
-.productSlider .card-img-top {
+.productElement .card-img-top {
   border: 1px solid rgba(0, 0, 0, 0.125);
   transition: 0.4s;
   height: 371px;
   width: fit-content;
 }
-.productSlider .card-img-top:hover {
+.productElement .card-img-top:hover {
   box-shadow: 0 2px 10px 0 #dbd8d863;
   filter: brightness(0.98);
 }
-.productSlider a {
+.productElement a {
   font-size: 15px;
   color: #404040;
   text-decoration: none;
 }
-.productSlider .btnGroup {
+.productElement .btnGroup {
   opacity: 0;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
-  left: 25%;
+  left: 30%;
+  width: 40%;
   bottom: 25%;
 }
-.productSlider .card:hover .btnGroup,
-.productSlider .card-img-top:hover .btnGroup{
+.productElement .card:hover .btnGroup,
+.productElement .card-img-top:hover .btnGroup{
   opacity: 1;
 }
-.productSlider .carousel-control-next-icon,
-.productSlider .carousel-control-prev-icon{
+.productElement .carousel-control-next-icon,
+.productElement .carousel-control-prev-icon{
   background-color: black;
 }
-.productSlider .carousel-control-prev {
+.productElement .carousel-control-prev {
   left: -4%;
 }
-.productSlider .carousel-control-next {
+.productElement .carousel-control-next {
   right: -4%;
 }
-.productSlider .carousel-control-next,
-.productSlider .carousel-control-prev{
+.productElement .carousel-control-next,
+.productElement .carousel-control-prev{
   width: auto;
 }
-.productSlider .carousel-indicators{
+ .carousel-indicators{
   display: none;
 }
-.btn{
+.productElement  .btn{
   border: 0;
   box-shadow: none !important;
+}
+.productElement .card-img-top {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; /* Ensures the entire image is visible within the container */
+  object-position: center; /* Centers the image within the container */
+  display: block;
+}
+.productElement .image-wrapper {
+  width: 100%;
+  height: 371px; /* Set a fixed height for the image container */
+  overflow: hidden; /* Ensures any overflow is hidden */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
