--- a/src/components/productSlider/style.css
+++ b/src/components/productSlider/style.css
@@ -13,6 +13,7 @@
 .productElement .price-new {
   font-size: 16px;
   font-weight: bolder;
+  right: 0;
 }
 .productElement .card-title {
   font-weight: 300;
