--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -5,6 +5,19 @@
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 1rem !important;
     padding-left: 1rem !important;
-}
+    }
   }
-
+.logo{
+  width: 100%;
+  max-height: 80px;
+  object-fit: contain;
+  @media (max-width: 768px) {
+    max-height: 50px;
+  }
+}
+.mobile-nav{
+  padding: 10px;
+  @media (max-width: 768px) {
+    padding: 0px;
+  }
+}
