--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -36,3 +36,37 @@ tbody, td, tfoot, th, thead, tr {
   opacity: 40%;
 
 }
+.composer-card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  transition: transform 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.composer-card:hover {
+  transform: translateY(-5px);
+}
+
+.composer-image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* 150% is the aspect ratio of the image */
+  overflow: hidden;
+}
+
+.composer-image {
+  position: absolute;
+  top: 0;
+  left: 0;  
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 100%;
+}
+.composer-page{
+  margin: 0 auto;
+}
+
+
