--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,18 +1,27 @@
 .navbar-collapse{
     flex-grow: inherit !important;
   }
-  @media (min-width: 992px){
-.navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 1rem !important;
-    padding-left: 1rem !important;
-    }
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 60px;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-brand {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
-.logo{
-  width: 100%;
-  max-height: 80px;
-  object-fit: contain;
-  @media (max-width: 768px) {
-    max-height: 50px;
+  .navbar-collapse {
+    text-align: center;
+  }
+  .nav-link {
+    display: inline-block;
+    margin: 0.5rem 0;
   }
 }
 .mobile-nav{
