enhance SearchPage component by adding search suggestions with animation; update product display to use ProductCardElement for improved layout and styling

--- a/src/components/productSlider/style.css
+++ b/src/components/productSlider/style.css
@@ -78,6 +78,7 @@
   display: block;
 }
 .productElement .image-wrapper {
+  min-width: 200px;
   width: 100%;
   height: 371px; /* Set a fixed height for the image container */
   overflow: hidden; /* Ensures any overflow is hidden */
